@@ -40,6 +40,8 @@ PIG-5446: Tez TestPigProgressReporting.testProgressReportingWithStatusMessage fa
 
 PIG-5450: Pig-on-Spark3 E2E ORC test failing with java.lang.VerifyError: Bad return type (knoguchi)
 
+PIG-5452: Null handling of FLATTEN with user defined schema (as clause) (knoguchi)
+
 Release 0.18.0 - Unreleased
  
 INCOMPATIBLE CHANGES
